# Haskell-Pipes-Handle-Library

./: pipes-handle.cabal  pipes-stream.cabal
src/Pipes/: Read.hs  Reader.hs  Write.hs  Writer.hs
